# chatbotlawai

./: .gitignore  README.md  package-lock.json  pyproject.toml
frontend/: app.py  chatbot.js  gemini.py  index.html  style.css
